<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Control</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter an Answer</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_play_animation">Play Animation</string>
    <string name="button_next_question">Next Question</string>
    <string name="button_answer">Answer</string>
    <string name="title_activity_send2_smb">Send2Smb</string>
    <string name="submenu_item1_ip">IP</string>
    <string name="title_activity_set_ip">Settings</string>
    <string name="pref_title_ip_address">IP address </string>
    <string name="pref_default_value_ip">192.168.0.0</string>
    <string name="pref_dialog_title_path_filename">Enter DriveLetter/Filename</string>
    <string name="pref_title_path_filename">Path</string>
    <string name="pref_username">Username</string>
    <string name="pref_password">Password</string>
    <string name="title_activity_check_wifi">Check Wifi</string>
    <string name="pref_authentication">Authentication</string>
    <string name="button_vg">VG</string>
    <string name="button_g">G</string>
    <string name="button_f">F</string>
    <string name="button_n">N</string>
    <string name="button_7">Addition</string>
    <string name="button_8">Objects</string>
    <string name="button_9">Numbers</string>
    <string name="button_start">START</string>
    
    <string name="button_12">Moral of the Story</string>
    <string name="button_13">Ask Question</string>
    <string name="button_rec">Record</string>
    <string name="button_rec_off">Record</string>
    <string name="button_rec_on">Stop</string>
    <string name="button_br">Branch</string>
    <string name="button_email_audio">Email Audio</string>
    <string name="button_email_video">Email Video</string>
  
    

</resources>
