<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--<CheckBoxPreference
        android:defaultValue="true"
        android:key="example_checkbox"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code.
    android:defaultValue="@string/" -->
    <!--  <EditTextPreference
        android:capitalize="words"
        
        android:inputType="text"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />-->
    
    <CheckBoxPreference
        android:title="@string/pref_authentication"
        
        android:summaryOn="Username, Password required"
        android:summaryOff="Public Shared"
        android:key="authentication" 
        android:defaultValue="false"/>
    
    <EditTextPreference
        android:capitalize="words"
        android:dependency="authentication"
        
        android:inputType="text"
        android:key="username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_username" />

    <EditTextPreference
        android:dependency="authentication"
        android:capitalize="words"
        android:password="true"
        android:inputType="text"
        android:key="password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_password" />
    
    <EditTextPreference 
        android:inputType="phone"
        android:maxLines="1"
        android:title="@string/pref_title_ip_address"
        android:key="ip_address"
        android:defaultValue="@string/pref_default_value_ip"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        />
    
     <EditTextPreference
        android:title="@string/pref_title_path_filename"
        android:dialogTitle="@string/pref_dialog_title_path_filename"
        android:inputType="text"
        android:key="path_filename"
       
        android:hint="Ex: [c/state.txt]"
        /> 
    <!-- android:summary="SharedFolder/filename.txt"-->
    
    
    <!--
         NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it.
    -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--  <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
        
    <ListPreference
        android:defaultValue="English"
        android:entries="@array/pref_lang_list"
        android:entryValues="@array/pref_lang_list"
        android:key="lang_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_lang_select"
        android:selectable="true"
         />-->
        
	
</PreferenceScreen>
